<!--
  Developed by Haerul Muttaqin
  Last modified 3/17/19 5:24 AM
  Subscribe : https://www.youtube.com/haerulmuttaqin
  Copyright (c) 2019. All rights reserved
  -->
<resources>
    <string name="app_name">Foods App</string>
    <string name="search_your_recipes">Search Your Recipes…</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="dot_loading">...</string>
    <string name="Ingredients">INGREDIENTS</string>
    <string name="youtube">YOUTUBE</string>
    <string name="source">SOURCE</string>
    <string name="favorite">Favorite</string>
    <string name="banner_ads_id">ca-app-pub-7622707640153634/8903034875</string>
    <string name="interstitial_ads_id">ca-app-pub-7622707640153634/9090737130</string>
    <string name="interstitial_video_ads_id">ca-app-pub-7622707640153634/9554126783</string>
</resources>
