<?xml version="1.0" encoding="utf-8"?>
<!--
  Developed by Haerul Muttaqin
  Last modified 3/17/19 5:24 AM
  Subscribe : https://www.youtube.com/haerulmuttaqin
  Copyright (c) 2019. All rights reserved
  -->
<androidx.coordinatorlayout.widget.CoordinatorLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.home.HomeActivity">

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">
        <RelativeLayout
            android:id="@+id/headerView"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="300dp">
            
            <View
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/title"
                android:textColor="@color/colorWhite"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:textColor="@color/colorPrimaryLight"
                android:text="Favorite" />

            <ImageView
                android:id="@+id/favorite"
                android:src="@drawable/ic_favorite"
                android:tint="@color/colorWhite"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="30dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSearch"
                android:layout_below="@id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:text="@string/search_your_recipes"
                    android:textColor="@color/colorPrimaryLight"
                    android:gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_search_primary_light"
                    android:drawableStart="@drawable/ic_search_primary_light"
                    android:drawablePadding="10dp"/>
            </androidx.cardview.widget.CardView>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPagerHeader"
                android:foregroundGravity="center"
                android:overScrollMode="never"
                android:clipToPadding="false"
                android:layout_below="@id/cardSearch"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

            <include android:id="@+id/shimmerMeal"
                layout="@layout/item_view_pager_header_shimmer" />

            <TextView
                android:id="@+id/titleCategory"
                android:text="@string/meal_categories"
                android:textSize="19sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/viewPagerHeader"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerCategory"
                android:scrollbars="none"
                android:layout_marginTop="10dp"
                android:clipToPadding="false"
                android:layout_below="@id/titleCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" />

             <include android:id="@+id/shimmerCategory"
                layout="@layout/item_recycler_category_shimmer" />

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_below="@id/recyclerCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="16sp"
                android:layout_marginEnd="16sp"
                android:layout_marginBottom="160dp"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/banner_ads_id"/>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>