<?xml version="1.0" encoding="utf-8"?>
<!--
  Developed by Haerul Muttaqin
  Last modified 4/7/19 7:40 PM
  Subscribe : https://www.youtube.com/haerulmuttaqin 
  Copyright (c) 2019. All rights reserved
  -->


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorBackground"
    tools:context=".view.detail.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppBarLayoutTheme">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/dot_loading">
            <ImageView
                android:id="@+id/mealThumb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>
            <ImageView
                android:src="@drawable/shadow_bottom_to_top"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginTop="-7dp"
                android:indeterminate="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">
                <android.support.v7.widget.CardView
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/textCategory"
                            android:text="@string/category"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="14dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/category"
                            android:text="@string/dot_loading"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="14dp"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimaryText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/Country"
                            android:text="@string/country"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="14dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/country"
                            android:text="@string/dot_loading"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="14dp"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimaryText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                android:drawableEnd="@drawable/ic_info"
                android:drawableRight="@drawable/ic_info" />
            
            <android.support.v7.widget.CardView
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:id="@+id/instructions"
                    android:text="@string/dot_loading"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.CardView>
            

            <android.support.v7.widget.CardView
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">
                   <TextView
                       android:paddingLeft="14dp"
                       android:paddingRight="14dp"
                       android:layout_marginTop="14dp"
                       android:text="@string/Ingredients"
                       android:textColor="@color/colorPrimaryDark"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content" />
                   <LinearLayout
                       android:layout_marginBottom="20dp"
                       android:orientation="horizontal"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">
                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:orientation="vertical"
                           android:layout_weight="1">
                           <TextView
                               android:id="@+id/ingredient"
                               android:paddingLeft="14dp"
                               android:paddingRight="14dp"
                               android:textSize="16sp"
                               android:textColor="@color/colorPrimaryText"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content" />
                       </LinearLayout>
                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:orientation="vertical"
                           android:layout_weight="1">
                           <TextView
                               android:id="@+id/measure"
                               android:paddingLeft="14dp"
                               android:paddingRight="14dp"
                               android:textSize="16sp"
                               android:textColor="@color/colorPrimaryText"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content" />
                       </LinearLayout>
                   </LinearLayout>
               </LinearLayout>
            </android.support.v7.widget.CardView>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp">
                <android.support.v7.widget.CardView
                    android:layout_weight="1"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="#FFE1E1"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">
                    <TextView
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:id="@+id/youtube"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/youtube"
                        android:padding="14dp"
                        android:textSize="16sp"
                        android:textColor="#EC2D2D"
                        android:gravity="center_vertical"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/ic_play"
                        android:drawableStart="@drawable/ic_play" />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_weight="1"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="#D0FFDB"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp">
                    <TextView
                        android:id="@+id/source"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/source"
                        android:padding="14dp"
                        android:textSize="16sp"
                        android:textColor="#2A7E2F"
                        android:gravity="center_vertical"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/ic_link"
                        android:drawableStart="@drawable/ic_link" />
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>